sumo/tests/dfrouter/errors/false_output_directory/errors.dfrouter
Error: Could not build output file 'invalid/emitters.add.xml' (No such file or directory).
Quitting (on error).
